syntax = "proto3";

package user;

option go_package = "github.com/dot-coaching/gen/go/user;user";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";


message User {
    string id = 1;
    string name = 2;
    string email = 3;
    string phone = 4;
    string password = 5;
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp updated_at = 7;
}

message CreateUserRequest {
    string name = 1;
    string email = 2;
    string phone = 3;
    string password = 4;
}

message CreateUserResponse {
    User user = 1;
}

message GetUserRequest {
    string id = 1;
}

message GetUserResponse {
    User user = 1;
}

message UpdateUserRequest {
    string id = 1;
    string name = 2;
    string email = 3;
    string phone = 4;
    string password = 5;
}

message UpdateUserResponse {
    User user = 1;
}

message DeleteUserRequest {
    string id = 1;
}

message DeleteUserResponse {
    google.protobuf.Empty empty = 1;
}

service UserService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}


